--- a/app/css/main.css
+++ b/app/css/main.css
@@ -68,9 +68,12 @@ h1 {
   h1 span {
     color: #42473d; }
 
+#mapView {
+  height: 100%; }
+
+#mapView .contentBubble {
+  height: 80%; }
+
 #map_canvas {
   height: 100%;
   width: 100%; }
-
-#mapView {
-  height: 100%; }
