--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -114,15 +114,32 @@ body {
 		height: 30px;
 		font-size: 150%;
 		overflow: visible;
+                cursor: pointer;
 		h2 {
 			position: relative;
 			top: 5px;
 		}
-	}		
+	}
+
+        #map_canvas {
+          height: 100%;
+          width: 100%;
+          }	
 }
 
-#map_canvas {
-  height: 100%;
-  width: 100%;
+
+#filterPage {
+            .contentBubble {    
+                           height: 80%;
+                           text-align: left; 
+
+                           h2 {
+                              text-align: center;
+                              font-size: 150%;
+                           }                                    
+            }
 }
+
+
+
 
