--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -144,3 +144,126 @@ body {
     }
   }
 }
+
+// google maps markers
+div! > div! > .marker_div {
+  background-image: url("../assets/debut_light.png");
+}
+
+.marker_div {
+  width: 100%;
+  height: 100%;
+  font-family: Arial, sans-serif;
+  font-size: 12px;
+
+  .child_header {
+    border-bottom: dotted thin gray;
+  }
+
+  .child_stats {
+  }
+
+  .child_results {
+  }
+
+  .child_footer {
+  }
+
+  // ZPID
+  .child_zpid {
+    position: absolute;
+    bottom: 3px;
+    right: 3px;
+    color: gray;
+  }
+
+  // street
+  .child_street {
+    clear: both;
+    float: left;
+    margin-top: -2px;
+    margin-left: -2px;
+    color: green;
+    font-size: 20px;
+  }
+
+  // city
+  .child_city {
+    clear: both;
+    float: right;
+    color: gray;
+    font-size: 15px;
+  }
+
+  // state
+  .child_state {
+    clear: both;
+    float: right;
+    color: gray;
+    font-size: 15px;
+  }
+
+  // zip
+  .child_zipcode {
+    clear: both;
+    float: right;
+    color: gray;
+    font-size: 15px;
+  }
+
+  // square footage
+  .child_sqFt {
+    float: left;
+    font-size: 18px;
+  }
+
+  // num bedrooms
+  .child_numBed {
+    clear: both;
+    float: left;
+    font-size: 18px;
+  }
+
+  // num bathrooms
+  .child_numBath {
+    clear: both;
+    float: left;
+    font-size: 18px;
+  }
+
+  // price estimation
+  .child_priceEst {
+    clear: both;
+    float: left;
+    font-size: 20px;
+    color: red;
+  }
+
+  // greenscore
+  .child_greenscore {
+    clear: both;
+    float: right;
+    font-size: 20px;
+    color: green;
+  }
+
+  // latitude
+  .child_lat {
+    clear: both;
+    float: left;
+    color: gray;
+  }
+
+  // longitude
+  .child_long {
+    float: left;
+    color: gray;
+  }
+
+  // ZPID
+  .child_zpid {
+    clear: both;
+    float: right;
+    color: gray;
+  }
+}
