--- a/app/css/main.css
+++ b/app/css/main.css
@@ -86,11 +86,10 @@ body {
   height: 80%;
   position: relative; }
   #mapView .contentBubble #filterOverlay {
+    background-image: url("../assets/button_background.jpg");
     background-color: rgba(120, 120, 120, 0.8);
+    display: inline-block;
     text-align: center;
-    position: absolute;
-    bottom: 15px;
-    left: -12px;
     width: 100%;
     height: 30px;
     font-size: 150%;
@@ -103,7 +102,7 @@ body {
 /* Apply when not on mobile */
 @media only screen and (min-device-width: 480px) {
   #map_canvas {
-    height: 100%;
+    height: 95%;
     width: 100%; } }
 #filterPage .contentBubble {
   height: 80%;
@@ -178,6 +177,7 @@ body {
   -webkit-border-radius: 10px;
   -o-border-radius: 10px;
   background: url("../assets/button_background.jpg");
+  border: solid thin #5a5a5a;
   box-shadow: 0 0 3px #111;
   -moz-box-shadow: 0 0 3px #111;
   -webkit-box-shadow: 0 0 3px #111;
