--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -120,11 +120,10 @@ body {
   position: relative;
 
   #filterOverlay {
+    background-image: url("../assets/button_background.jpg");
     background-color: rgba(120,120,120,.8);
+    display: inline-block;
     text-align: center;
-    position: absolute;
-    bottom: 15px;
-    left: -12px;
     width: 100%;
     height: 30px;
     font-size: 150%;
@@ -140,11 +139,10 @@ body {
 /* Apply when not on mobile */
 @media only screen and (min-device-width : 480px){
   #map_canvas {
-    height: 100%;
+    height: 95%;
      width: 100%;
   }
 }
-  
 
 
 #filterPage {
@@ -263,6 +261,7 @@ $ORANGE: rgb(234, 114, 33);
 *[data-role="button"] {
   @include roundEdges(10px);
   background: url("../assets/button_background.jpg");
+  border: solid thin rgb(90, 90, 90);
 
   box-shadow: 0 0 3px #111;
   -moz-box-shadow: 0 0 3px #111;
