added filtering front-end

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,16 +1,22 @@
-@import url(./jquery-ui.css);
 /** @file main.scss
  *
  *  @brief Main css file for the app.
  *  @author Lucas Ray (ltray)
  *  @author Kenneth Murphy (kmmurphy)
  */
+/* imports
+@import "./jquery.mobile.custom.min.css";
+@import "./jquery.mobile.custom.structure.min.css";
+@import "./jquery.mobile.custom.theme.min.css";
+@import "./jquery-ui-1.9.2.custom.css":
+*/
 html {
   height: 100%;
   width: 100%; }
 
-body {
+.gsPage {
   font-family: Helvetica, sans-serif;
+  text-shadow: 0px 0px 0px #fff;
   height: 100%;
   width: 100%;
   margin: 0px;
@@ -18,7 +24,7 @@ body {
   background-image: url("../assets/green.jpg");
   background-repeat: repeat; }
 
-#searchBtn {
+#queryBtn {
   display: none; }
 
 .contentBubble {
@@ -35,23 +41,25 @@ body {
   box-shadow: 0 0 8px #111;
   -moz-box-shadow: 0 0 8px #111;
   -webkit-box-shadow: 0 0 8px #111; }
-  .contentBubble input {
-    border-radius: 5px;
-    -mox-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -o-border-radius: 5px;
-    margin: 3% 0 0 10%;
-    width: 80%;
-    height: 30px;
-    box-shadow: 0 0 2px #111;
-    -moz-box-shadow: 0 0 2px #111;
-    -webkit-box-shadow: 0 0 2px #111; }
   .contentBubble h1 {
-    margin: 15px;
+    padding-top: 30px;
     font-size: 350%;
     color: #68874b; }
     .contentBubble h1 span {
       color: #42473d; }
+
+#searchBar {
+  border-radius: 5px;
+  -mox-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  margin-top: 20px;
+  margin-left: 10%;
+  width: 80%;
+  height: 30px;
+  box-shadow: 0 0 2px #111;
+  -moz-box-shadow: 0 0 2px #111;
+  -webkit-box-shadow: 0 0 2px #111; }
 
 .navBar {
   position: relative;
@@ -64,7 +72,7 @@ body {
     margin-right: 10%;
     text-align: center; }
     .navBar .navBtn h2 {
-      font-size: 16px;
+      font-size: 18px;
       color: #42473d;
       cursor: pointer; }
     .navBar .navBtn h2:hover {
@@ -74,10 +82,8 @@ body {
       bottom: -37px;
       position: absolute; }
 
-#mapView {
-  height: 100%; }
-
 #mapView .contentBubble {
+  padding: 10px;
   height: 80%;
   position: relative; }
   #mapView .contentBubble #filterOverlay {
@@ -95,17 +101,55 @@ body {
       position: relative;
       top: 5px; }
 
-/* Apply when not on mobile */
-@media only screen and (min-device-width: 480px) {
-  #map_canvas {
-    height: 100%;
-    width: 100%; } }
+#map_canvas {
+  height: 100%;
+  width: 100%; }
+
 #filterPage .contentBubble {
   height: 80%;
-  text-align: left; }
+  text-align: left;
+  overflow: auto; }
   #filterPage .contentBubble h2 {
+    padding-top: 20px;
     text-align: center;
-    font-size: 150%; }
+    font-size: 180%;
+    text-decoration: underline; }
+  #filterPage .contentBubble h3 {
+    font-size: 120%;
+    padding-top: 15px;
+    padding-left: 20px; }
+
+.rangeSlider {
+  width: 90%;
+  margin: 10px 0px 20px 5%;
+  height: 60px;
+  position: relative; }
+  .rangeSlider .sliderMin {
+    position: relative;
+    float: left;
+    width: 100%;
+    height: 30px; }
+    .rangeSlider .sliderMin input.ui-input-text, .rangeSlider .sliderMin textarea.ui-input-text {
+      width: 100px;
+      float: left; }
+    .rangeSlider .sliderMin div.ui-slider {
+      top: 16px;
+      left: 5px;
+      float: left;
+      width: 70%; }
+  .rangeSlider .sliderMax {
+    width: 100%;
+    height: 30px;
+    position: absolute;
+    float: left; }
+    .rangeSlider .sliderMax input.ui-input-text, .rangeSlider .sliderMax textarea.ui-input-text {
+      position: absolute;
+      width: 100px;
+      right: 0px; }
+    .rangeSlider .sliderMax div.ui-slider {
+      top: 16px;
+      left: 105px;
+      width: 70%; }
 
 .marker_header {
   font-family: Arial, sans-serif; }
