--- a/app/css/mobile.scss
+++ b/app/css/mobile.scss
@@ -16,7 +16,7 @@
     
   .contentBubble {
     width: 90%;
-    padding: 0px;
+    padding: 10px;
     margin: 5px 5%;
     height: 200px;
     h1 {
@@ -39,12 +39,13 @@
     }
   }
 
+  /*
   #map_canvas {
     height: 92%;
     width: 92%;
     margin-top: 4%;
     margin-left: 4%;
-  }
+  }*/
 
   #queryBtn {
     background-color: #EDEDED;
