--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -42,10 +42,6 @@ html {
   background-repeat: repeat;
 }
 
-#queryBtn {
-  display: none;
-}
-
 .contentBubble {
   @include roundEdges(10px);
 
@@ -56,6 +52,8 @@ html {
   height: 250px;
   margin: 5px 15% 15% 15%;
   text-align: center;
+  padding-left: 10px;
+  padding-right: 10px;
 
   box-shadow: 0 0 8px #111;
   -moz-box-shadow: 0 0 8px #111;
@@ -69,21 +67,35 @@ html {
       color: $gray;
     }
   }
-
-  #buttonWrapper {
-    display: inline-block;
-    text-align: ceneter;
-    width: 80%;
-    padding-top: 10px;
-  }
 }
 
 // special case login page
 #loginPage .contentBubble {
-  height: 100%;
+  height: 80%;
+  overflow: scroll;
 
+
+  // special case these because this css is janky
   #login_button {
-    background-color: black;
+    background: url("../assets/button_background.jpg");
+
+    color: white;
+    font-weight: normal;
+    letter-spacing: 2px;
+    font: Arial, sans-serif;
+    text-shadow: none;
+    text-align: center;
+  }
+
+  #register_button {
+    background: url("../assets/button_background.jpg");
+
+    color: white;
+    font-weight: normal;
+    letter-spacing: 2px;
+    font: Arial, sans-serif;
+    text-shadow: none;
+    text-align: center;
   }
 }
 
@@ -324,6 +336,13 @@ $ORANGE: rgb(234, 114, 33);
 }
 
 // buttons
+.buttonWrapper {
+  display: inline-block;
+  text-align: ceneter;
+  width: 80%;
+  padding-top: 10px;
+}
+
 *[data-role="button"] {
   @include roundEdges(10px);
   background: url("../assets/button_background.jpg");
@@ -334,6 +353,12 @@ $ORANGE: rgb(234, 114, 33);
   -webkit-box-shadow: 0 0 3px #111;
 
   color: white;
+  font-weight: normal;
+  letter-spacing: 2px;
+  font: Arial, sans-serif;
+  text-shadow: none;
+
+  cursor: pointer;
 }
 
 // loading screen
