--- a/app/css/main.css
+++ b/app/css/main.css
@@ -63,6 +63,9 @@ body {
   #loginPage .contentBubble #login_button {
     background-color: black; }
 
+#profilePage .contentBubble {
+  height: 100%; }
+
 .navBar {
   position: relative;
   width: 70%;
