--- a/app/css/main.css
+++ b/app/css/main.css
@@ -24,9 +24,6 @@ html {
   background-image: url("../assets/green.jpg");
   background-repeat: repeat; }
 
-#queryBtn {
-  display: none; }
-
 .contentBubble {
   border-radius: 10px;
   -mox-border-radius: 10px;
@@ -99,6 +96,9 @@ html {
   #mapView .contentBubble #filterOverlay {
     background-image: url("../assets/button_background.jpg");
     background-color: rgba(120, 120, 120, 0.8);
+    position: absolute;
+    bottom: 10px;
+    left: -5px;
     display: inline-block;
     text-align: center;
     width: 100%;
@@ -117,20 +117,35 @@ html {
 #filterPage .contentBubble {
   height: 80%;
   text-align: left;
-  overflow: auto; }
+  overflow: auto;
+  position: relative; }
   #filterPage .contentBubble h2 {
-    padding-top: 20px;
+    padding-top: 15px;
     text-align: center;
     font-size: 180%;
     text-decoration: underline; }
   #filterPage .contentBubble h3 {
     font-size: 120%;
-    padding-top: 15px;
+    padding-top: 12px;
     padding-left: 20px; }
+  #filterPage .contentBubble #rtnMapBtn {
+    background-image: url("../assets/button_background.jpg");
+    background-color: rgba(120, 120, 120, 0.8);
+    position: absolute;
+    left: -5px;
+    text-align: center;
+    width: 100%;
+    height: 30px;
+    font-size: 150%;
+    overflow: visible;
+    cursor: pointer; }
+    #filterPage .contentBubble #rtnMapBtn h5 {
+      position: relative;
+      top: 5px; }
 
 .rangeSlider {
   width: 90%;
-  margin: 10px 0px 20px 5%;
+  margin: 5px 0px 15px 5%;
   height: 60px;
   position: relative; }
   .rangeSlider .sliderMin {
@@ -159,6 +174,21 @@ html {
       top: 16px;
       left: 105px;
       width: 70%; }
+
+#msgDiv {
+  margin-top: 5px;
+  width: 100%;
+  text-align: center; }
+
+.noMsg {
+  visibility: hidden;
+  transition: visibility 1s; }
+
+.showMsg {
+  transition: visibility 1s;
+  color: #99c76f;
+  font-size: 150%;
+  visability: visible; }
 
 .marker_header {
   font-family: Arial, sans-serif; }
