Add edit profile page

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 /** @file main.scss
  *
  *  @brief Main css file for the app.
@@ -48,10 +47,12 @@ html {
     .contentBubble h1 span {
       color: #42473d; }
 
-#loginPage .contentBubble, #profilePage .contentBubble {
+#loginPage .contentBubble, #profilePage .contentBubble,
+#editProfilePage .contentBubble {
   height: 80%;
   overflow: scroll; }
-  #loginPage .contentBubble #login_button, #profilePage .contentBubble #login_button {
+  #loginPage .contentBubble #login_button, #profilePage .contentBubble #login_button,
+  #editProfilePage .contentBubble #login_button {
     background: url("../assets/button_background.jpg");
     color: white;
     font-weight: normal;
@@ -59,7 +60,8 @@ html {
     font: Arial, sans-serif;
     text-shadow: none;
     text-align: center; }
-  #loginPage .contentBubble #register_button, #profilePage .contentBubble #register_button {
+  #loginPage .contentBubble #register_button, #profilePage .contentBubble #register_button,
+  #editProfilePage .contentBubble #register_button {
     background: url("../assets/button_background.jpg");
     color: white;
     font-weight: normal;
@@ -67,314 +69,29 @@ html {
     font: Arial, sans-serif;
     text-shadow: none;
     text-align: center; }
-  #loginPage .contentBubble #or_spacer, #profilePage .contentBubble #or_spacer {
+  #loginPage .contentBubble #or_spacer, #profilePage .contentBubble #or_spacer,
+  #editProfilePage .contentBubble #or_spacer {
     font-style: italic;
     padding-top: 10px;
     padding-bottom: 17px; }
-  #loginPage .contentBubble #login_page_separator, #profilePage .contentBubble #login_page_separator {
+  #loginPage .contentBubble #login_page_separator, #profilePage .contentBubble #login_page_separator,
+  #editProfilePage .contentBubble #login_page_separator {
     margin-top: 40px;
     margin-bottom: 40px; }
-  #loginPage .contentBubble #account_create_label, #profilePage .contentBubble #account_create_label {
+  #loginPage .contentBubble #account_create_label, #profilePage .contentBubble #account_create_label,
+  #editProfilePage .contentBubble #account_create_label {
     font-size: 20px;
     padding-bottom: 10px;
     font-weight: bold; }
-  #loginPage .contentBubble table, #profilePage .contentBubble table {
+  #loginPage .contentBubble table, #profilePage .contentBubble table,
+  #editProfilePage .contentBubble table {
     padding: 10px;
     margin: 0 auto; }
-  #loginPage .contentBubble td, #loginPage .contentBubble th, #profilePage .contentBubble td, #profilePage .contentBubble th {
+  #loginPage .contentBubble td, #loginPage .contentBubble th, #profilePage .contentBubble td, #profilePage .contentBubble th,
+  #editProfilePage .contentBubble td,
+  #editProfilePage .contentBubble th {
     padding: 10px;
     margin: 10px; }
-
-#searchBar {
-  border-radius: 5px;
-  -mox-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -o-border-radius: 5px;
-  margin-top: 20px;
-  margin-left: 10%;
-  width: 80%;
-  height: 30px;
-  box-shadow: 0 0 2px #111;
-  -moz-box-shadow: 0 0 2px #111;
-  -webkit-box-shadow: 0 0 2px #111; }
-
-.navBar {
-  position: relative;
-  width: 70%;
-  text-align: right;
-  margin: 20px 0px 30px 15%; }
-  .navBar .navBtn {
-    position: relative;
-    display: inline-block;
-    margin-right: 10%;
-    text-align: center; }
-    .navBar .navBtn h2 {
-      font-size: 18px;
-      color: #42473d;
-      cursor: pointer; }
-    .navBar .navBtn h2:hover {
-      color: black;
-      cursor: pointer; }
-    .navBar .navBtn img {
-      bottom: -37px;
-      position: absolute;
-      z-index: 100; }
-
-#mapView .contentBubble {
-  padding: 10px;
-  padding-bottom: 40px;
-  height: 80%;
-  position: relative; }
-  #mapView .contentBubble #filterOverlay {
-    border-radius: 10px;
-    -mox-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -o-border-radius: 10px;
-    background-image: url("../assets/button_background.jpg");
-    background-color: rgba(120, 120, 120, 0.8);
-    display: inline-block;
-    text-align: center;
-    width: 100%;
-    height: 30px;
-    font-size: 150%;
-    overflow: visible;
-    cursor: pointer; }
-    #mapView .contentBubble #filterOverlay h2 {
-      position: relative;
-      top: 5px; }
-
-#map_canvas {
-  height: 100%;
-  width: 100%; }
-
-#filterPage .contentBubble {
-  height: 80%;
-  text-align: left;
-  overflow: auto; }
-  #filterPage .contentBubble h2 {
-    padding-top: 20px;
-    text-align: center;
-    font-size: 180%;
-    text-decoration: underline; }
-  #filterPage .contentBubble h3 {
-    font-size: 120%;
-    padding-top: 15px;
-    padding-left: 20px; }
-
-.rangeSlider {
-  width: 90%;
-  margin: 10px 0px 20px 5%;
-  height: 60px;
-  position: relative; }
-  .rangeSlider .sliderMin {
-    position: relative;
-    float: left;
-    width: 100%;
-    height: 30px; }
-    .rangeSlider .sliderMin input.ui-input-text, .rangeSlider .sliderMin textarea.ui-input-text {
-      width: 100px;
-      float: left; }
-    .rangeSlider .sliderMin div.ui-slider {
-      top: 16px;
-      left: 5px;
-      float: left;
-      width: 70%; }
-  .rangeSlider .sliderMax {
-    width: 100%;
-    height: 30px;
-    position: absolute;
-    float: left; }
-    .rangeSlider .sliderMax input.ui-input-text, .rangeSlider .sliderMax textarea.ui-input-text {
-      position: absolute;
-      width: 100px;
-      right: 0px; }
-    .rangeSlider .sliderMax div.ui-slider {
-      top: 16px;
-      left: 105px;
-      width: 70%; }
-
-.marker_header {
-  font-family: Arial, sans-serif; }
-  .marker_header .child_street {
-    width: 100%;
-    float: left;
-    color: #69b725;
-    font-size: 18px;
-    font-weight: bold; }
-  .marker_header .child_city {
-    float: right;
-    color: #c1bfbf;
-    font-size: 12px; }
-  .marker_header .child_state {
-    float: right;
-    color: #c1bfbf;
-    font-size: 12px; }
-  .marker_header .child_zipcode {
-    float: right;
-    color: #c1bfbf;
-    font-size: 12px; }
-
-.marker_stats .child_sqFt {
-  float: right;
-  color: gainsboro;
-  font-size: 15px; }
-.marker_stats .child_numBed {
-  float: left;
-  color: gainsboro;
-  font-size: 15px; }
-.marker_stats .child_numBath {
-  float: left;
-  color: gainsboro;
-  font-size: 15px; }
-
-.marker_results {
-  min-height: 26px; }
-  .marker_results .child_priceEst {
-    float: left;
-    color: #ea7221;
-    font-size: 18px;
-    font-weight: bold; }
-  .marker_results .child_greenscore {
-    float: right;
-    color: #69b725;
-    font-size: 18px;
-    font-weight: bold; }
-
-.marker_footer .child_lat {
-  font-size: 9px;
-  float: left;
-  color: #c1bfbf; }
-.marker_footer .child_long {
-  font-size: 9px;
-  float: left;
-  color: #c1bfbf; }
-.marker_footer .child_zpid {
-  font-size: 9px;
-  float: right;
-  color: #c1bfbf; }
-
-.buttonWrapper {
-  display: inline-block;
-  text-align: ceneter;
-  width: 80%;
-  padding-top: 10px; }
-
-*[data-role="button"] {
-  border-radius: 10px;
-  -mox-border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -o-border-radius: 10px;
-  background: url("../assets/button_background.jpg");
-  border: solid thin #5a5a5a;
-  box-shadow: 0 0 3px #111;
-  -moz-box-shadow: 0 0 3px #111;
-  -webkit-box-shadow: 0 0 3px #111;
-  color: white;
-  font-weight: normal;
-  letter-spacing: 2px;
-  font: Arial, sans-serif;
-  text-shadow: none;
-  cursor: pointer; }
-
-#loading_div {
-  border-radius: 10px;
-  -mox-border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -o-border-radius: 10px;
-  background-color: #505050;
-  padding: 30px; }
-
-#loading_text {
-  padding-top: 20px;
-  font-size: 20px;
-  color: white;
-  font-family: Helvetica, sans-serif;
-  text-align: center; }
-
-#loading_gif {
-  display: inline-block;
-  text-align: center;
-  padding-left: 30px; }
-=======
-/** @file main.scss
- *
- *  @brief Main css file for the app.
- *  @author Lucas Ray (ltray)
- *  @author Kenneth Murphy (kmmurphy)
- */
-/* imports
-@import "./jquery.mobile.custom.min.css";
-@import "./jquery.mobile.custom.structure.min.css";
-@import "./jquery.mobile.custom.theme.min.css";
-@import "./jquery-ui-1.9.2.custom.css":
-*/
-html {
-  height: 100%;
-  width: 100%; }
-
-.gsPage {
-  font-family: Helvetica, sans-serif;
-  text-shadow: 0px 0px 0px #fff;
-  height: 100%;
-  width: 100%;
-  margin: 0px;
-  padding: 0px;
-  background-image: url("../assets/green.jpg");
-  background-repeat: repeat; }
-
-.contentBubble {
-  border-radius: 10px;
-  -mox-border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -o-border-radius: 10px;
-  background-image: url("../assets/debut_light.png");
-  background-repeat: repeat;
-  width: 70%;
-  height: 250px;
-  margin: 5px 15% 15% 15%;
-  text-align: center;
-  padding-left: 10px;
-  padding-right: 10px;
-  box-shadow: 0 0 8px #111;
-  -moz-box-shadow: 0 0 8px #111;
-  -webkit-box-shadow: 0 0 8px #111; }
-  .contentBubble h1 {
-    padding-top: 30px;
-    font-size: 350%;
-    color: #68874b; }
-    .contentBubble h1 span {
-      color: #42473d; }
-
-#loginPage .contentBubble {
-  height: 80%;
-  overflow: scroll; }
-  #loginPage .contentBubble #login_button {
-    background: url("../assets/button_background.jpg");
-    color: white;
-    font-weight: normal;
-    letter-spacing: 2px;
-    font: Arial, sans-serif;
-    text-shadow: none;
-    text-align: center; }
-  #loginPage .contentBubble #register_button {
-    background: url("../assets/button_background.jpg");
-    color: white;
-    font-weight: normal;
-    letter-spacing: 2px;
-    font: Arial, sans-serif;
-    text-shadow: none;
-    text-align: center; }
-  #loginPage .contentBubble #or_spacer {
-    font-style: italic;
-    padding-top: 10px;
-    padding-bottom: 17px; }
-  #loginPage .contentBubble #login_page_separator {
-    margin-top: 40px;
-    margin-bottom: 40px; }
-  #loginPage .contentBubble #account_create_label {
-    font-size: 20px;
-    padding-bottom: 10px;
-    font-weight: bold; }
 
 #searchBar {
   border-radius: 5px;
@@ -619,4 +336,3 @@ html {
   display: inline-block;
   text-align: center;
   padding-left: 30px; }
->>>>>>> 547ac7f026eabc6337580bdf052afa720486ca61
