--- a/app/css/main.css
+++ b/app/css/main.css
@@ -50,7 +50,8 @@ html {
 #loginPage .contentBubble, #profilePage .contentBubble,
 #editProfilePage .contentBubble {
   height: 80%;
-  overflow: scroll; }
+  overflow: scroll;
+  position: relative; }
   #loginPage .contentBubble #login_button, #profilePage .contentBubble #login_button,
   #editProfilePage .contentBubble #login_button {
     background: url("../assets/button_background.jpg");
@@ -92,6 +93,51 @@ html {
   #editProfilePage .contentBubble th {
     padding: 10px;
     margin: 10px; }
+  #loginPage .contentBubble #welcomeMessageWelcome, #profilePage .contentBubble #welcomeMessageWelcome,
+  #editProfilePage .contentBubble #welcomeMessageWelcome {
+    color: #42473d; }
+  #loginPage .contentBubble #welcomeMessage, #profilePage .contentBubble #welcomeMessage,
+  #editProfilePage .contentBubble #welcomeMessage {
+    color: #68874b; }
+  #loginPage .contentBubble #edit_button, #profilePage .contentBubble #edit_button,
+  #editProfilePage .contentBubble #edit_button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    text-decoration: none;
+    color: #e8e8e8;
+    background-color: #424242;
+    border-radius: 5px;
+    -mox-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -o-border-radius: 5px;
+    padding: 3px;
+    border: solid thin #5a5a5a;
+    box-shadow: 0 0 3px #111;
+    -moz-box-shadow: 0 0 3px #111;
+    -webkit-box-shadow: 0 0 3px #111; }
+  #loginPage .contentBubble #info_label, #profilePage .contentBubble #info_label,
+  #editProfilePage .contentBubble #info_label {
+    font-family: 'Playfair Display SC', serif;
+    font-style: italic;
+    font-size: 35px;
+    color: rgba(66, 71, 61, 0.7);
+    padding-top: 10px; }
+  #loginPage .contentBubble .info_item, #profilePage .contentBubble .info_item,
+  #editProfilePage .contentBubble .info_item {
+    font-family: 'Playfair Display SC', serif;
+    width: 50%;
+    font-size: 20px;
+    display: inline-block;
+    text-align: center; }
+    #loginPage .contentBubble .info_item .left_item, #profilePage .contentBubble .info_item .left_item,
+    #editProfilePage .contentBubble .info_item .left_item {
+      float: left;
+      color: rgba(36, 118, 237, 0.85); }
+    #loginPage .contentBubble .info_item .right_item, #profilePage .contentBubble .info_item .right_item,
+    #editProfilePage .contentBubble .info_item .right_item {
+      float: right;
+      color: rgba(11, 11, 11, 0.9); }
 
 #searchBar {
   border-radius: 5px;
@@ -306,10 +352,6 @@ html {
   -webkit-border-radius: 10px;
   -o-border-radius: 10px;
   background: url("../assets/button_background.jpg");
-  border: solid thin #5a5a5a;
-  box-shadow: 0 0 3px #111;
-  -moz-box-shadow: 0 0 3px #111;
-  -webkit-box-shadow: 0 0 3px #111;
   color: white;
   font-weight: normal;
   letter-spacing: 2px;
@@ -336,3 +378,9 @@ html {
   display: inline-block;
   text-align: center;
   padding-left: 30px; }
+
+.bordered {
+  border: solid thin #5a5a5a;
+  box-shadow: 0 0 3px #111;
+  -moz-box-shadow: 0 0 3px #111;
+  -webkit-box-shadow: 0 0 3px #111; }
