--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -16,7 +16,11 @@
 $green: #99c76f;
 $darkGreen: #68874B;
 $gray: #42473D;
-$lightGray: #C1D0B2;
+$transGray: rgba(66, 71, 61, 0.7);
+$transBlue: rgba(36, 118, 237, 0.85);
+$transBlack: rgba(11, 11, 11, 0.9);
+$offwhite: rgb(232, 232, 232);
+$offblack: rgb(66, 66, 66);
 
 @mixin roundEdges($weight) {
   border-radius: $weight;
@@ -71,11 +75,11 @@ html {
 }
 
 // special case login page
-#loginPage .contentBubble, #profilePage .contentBubble, 
+#loginPage .contentBubble, #profilePage .contentBubble,
 #editProfilePage .contentBubble {
   height: 80%;
   overflow: scroll;
-
+  position: relative;
 
   // special case these because this css is janky
   #login_button {
@@ -124,6 +128,58 @@ html {
   td, th {
     padding: 10px;
     margin: 10px;
+  }
+
+  // profile page
+  #welcomeMessageWelcome {
+    color: $gray;
+  }
+
+  #welcomeMessage {
+    color: $darkGreen;
+  }
+  #edit_button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    text-decoration: none;
+    color: $offwhite;
+
+    background-color: $offblack;
+    @include roundEdges(5px);
+    padding: 3px;
+
+    border: solid thin rgb(90, 90, 90);
+
+    box-shadow: 0 0 3px #111;
+    -moz-box-shadow: 0 0 3px #111;
+    -webkit-box-shadow: 0 0 3px #111;
+  }
+
+  #info_label {
+    font-family: 'Playfair Display SC', serif;
+    font-style: italic;
+    font-size: 35px;
+    color: $transGray;
+    padding-top: 10px;
+  }
+
+  .info_item {
+    font-family: 'Playfair Display SC', serif;
+    width: 50%;
+    font-size: 20px;
+    display: inline-block;
+    text-align: center;
+
+    .left_item {
+      float: left;
+      color: $transBlue;
+    }
+
+    .right_item {
+      float: right;
+      color: $transBlack;
+    }
   }
 }
 
@@ -409,11 +465,6 @@ $ORANGE: rgb(234, 114, 33);
 *[data-role="button"] {
   @include roundEdges(10px);
   background: url("../assets/button_background.jpg");
-  border: solid thin rgb(90, 90, 90);
-
-  box-shadow: 0 0 3px #111;
-  -moz-box-shadow: 0 0 3px #111;
-  -webkit-box-shadow: 0 0 3px #111;
 
   color: white;
   font-weight: normal;
@@ -443,4 +494,12 @@ $ORANGE: rgb(234, 114, 33);
   display: inline-block;
   text-align: center;
   padding-left: 30px;
+}
+
+.bordered {
+  border: solid thin rgb(90, 90, 90);
+
+  box-shadow: 0 0 3px #111;
+  -moz-box-shadow: 0 0 3px #111;
+  -webkit-box-shadow: 0 0 3px #111;
 }
